--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,27 +1,28 @@
-container:
-  image: cirrusci/android-sdk:30
-  cpu: 4
-  memory: 12G
-  kvm: true
-
-check_android_task:
-  install_emulator_script:
-    sdkmanager --install "system-images;android-30;google_apis;x86"
-  create_avd_script:
-    echo no | avdmanager create avd --force
-      -n emulator
-      -k "system-images;android-30;google_apis;x86"
-  start_avd_background_script:
-    $ANDROID_HOME/emulator/emulator
-      -avd emulator
-      -no-audio
-      -no-boot-anim
-      -gpu swiftshader_indirect
-      -no-snapshot
-      -no-window
-  # assemble while emulator is starting
-  assemble_instrumented_tests_script:
-    ./gradlew assembleDebugAndroidTest
-  wait_for_avd_script:
-    adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 3; done; input keyevent 82'
-  check_script: ./gradlew check connectedCheck
+name: publish
+on: [push]
+jobs:
+  # General job notes: we DON'T want to cancel any previous runs, especially in the case of a "back to snapshots" build right after a release push
+  # We specify the ubuntu version to minimize the chances we have to deal with a migration during a release
+  prepare:
+    # Notes on prepare: this job has no access to secrets, only github token. As a result, all non-core actions are centralized here
+    # This includes the tagging and drafting of release notes. Still, when possible we favor plain run of gradle tasks
+    name: prepare
+    runs-on: self-hosted
+    outputs:
+      versionType: ${{ steps.version.outputs.versionType }}
+      fullVersion: ${{ steps.version.outputs.fullVersion }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: setup java
+      uses: actions/setup-java@v1
+      with:
+        java-version: 8
+    - name: interpret version
+      id: version
+      #we only run the qualifyVersionGha task so that no other console printing can hijack this step's output
+      #output: versionType, fullVersion
+      #fails if versionType is BAD, which interrupts the workflow
+      run: ./gradlew qualifyVersionGha
+    - name: run checks
+      id: checks
+      run: ./gradlew check
